Mon Jun 04 07:07:28 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i,xapian.i: Wrap xapian/dbfactory.h functions
	  directly, except for C# and Java, where we use a fake class hack.
	* python/smoketest2.py: Enable test that WritableDatabase form of
	  xapian.open_stub() is now wrapped.
	* php/smoketest.php: Check that Xapian::Auto::open_stub() is wrapped
	  as Xapian::auto_open_stub().

Mon Jun 04 06:23:02 GMT 2012  Olly Betts <olly@survex.com>

	* python/smoketest2.py: Test xapian.open_stub() is wrapped.

Mon Jun 04 05:01:17 GMT 2012  Olly Betts <olly@survex.com>

	* python/smoketest2.py: Add tests that the database factory functions
	  are wrapped as we expected.

Mon Jun 04 04:47:06 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-headers.i: Fix comment typo.

Mon Jun 04 04:46:41 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/docs/index.html: Update Mono version tested with.

Sun Jun 03 22:51:29 GMT 2012  Olly Betts <olly@survex.com>

	* README: Fix 'Jit' -> 'it'.  Typo introduced in r15713.

Sun Jun 03 13:04:18 GMT 2012  Olly Betts <olly@survex.com>

	* xapian.i: Remove the old %extend Query constructors, as they are no
	  longer used for any of the languages.

Sun Jun 03 12:54:25 GMT 2012  Olly Betts <olly@survex.com>

	* lua/util.i,php/php.i,python/python.i,ruby/ruby.i,tcl8/tcl.i: Mark
	  XapianSWIGQueryItor implementations as random_access_iterator, and
	  implement XapianSWIGQueryItor::operator-(), so Xapian::Query's
	  template constructor knows how many elements to preallocate.

Sun Jun 03 11:48:31 GMT 2012  Olly Betts <olly@survex.com>

	* java/java.i: Use the XAPIAN_MIXED_SUBQUERIES_BY_ITERATOR_TYPEMAP
	  approach for Java too (though we don't actually support mixed
	  subqueries in the case of Java, so it's now a bit misnamed now!)

Sat Jun 02 12:41:12 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/parser.t: Fix accidentally pasted comment.

Sat Jun 02 12:39:58 GMT 2012  Olly Betts <olly@survex.com>
