@@ -1,3 +1,11 @@
+Mon Jun 04 12:01:06 GMT 2012  Olly Betts <olly@survex.com>
+
+	* swig-depcomp: Script which wraps a call to SWIG and tells it to
+	  generate dependencies, and then adjust the generated dependencies.
+	* csharp/Makefile.am,java/Makefile.am,lua/Makefile.am,perl/Makefile.am,
+	  php/Makefile.am,python/Makefile.am,ruby/Makefile.am,tcl8/Makefile.am: 
+	  Use swig-depcomp.
+
 Mon Jun 04 07:07:28 GMT 2012  Olly Betts <olly@survex.com>
 
 	* xapian-headers.i,xapian.i: Wrap xapian/dbfactory.h functions
